--- a/sass/partials/_regions.scss
+++ b/sass/partials/_regions.scss
@@ -1,7 +1,10 @@
 #breadcrumb {
 	margin-top: 10px;
 	}
-
+.messages {
+	margin: 0 auto;
+  }
+  
 .front .article-content img{
 	width: 138px;
 	height: 78px;
