--- a/sass/partials/global/_variables.scss
+++ b/sass/partials/global/_variables.scss
@@ -7,4 +7,5 @@ $article-bg: #f8f8f8;
 $border-shadow: #e5e5e5;
 $meta-color: #707070;
 $gray: #e7e7e7;
-$selection: #BF7130;
+$selection: #b3d4fc;
+$font: "tenso",sans-serif;
