--- a/sass/partials/_body.scss
+++ b/sass/partials/_body.scss
@@ -1,18 +1,23 @@
+html{
+  position: relative;
+  min-height: 100%;
+  }
+
 body{
-	font-family: "Trebuchet MS", sans-serif;
+	font-family: $font;
 	font-size: 16px;
 	background: url('../images/bg.png') repeat 0 0;
-	margin: 0;
 	padding: 0;
+	margin: 0 0 100px; /* Footer height for sticky footer */
 	}
 
 ::-moz-selection {
 	background: $selection;
-	color: $white;
+	color: $black;
 	}
 ::selection {
 	background: $selection;
-	color: $white;
+	color: $black;
 	}
 ul.inline li.disqus_comments_num {
 	display:none;
