--- a/sass/partials/_headers.scss
+++ b/sass/partials/_headers.scss
@@ -38,6 +38,7 @@
 
 		li{
 			float: left;
+			padding: 0;
 			a{
 				line-height: 32px;
 				text-decoration: none;
@@ -48,5 +49,10 @@
 				padding: 0 10px 0 10px;
 				}
 			}
+		li.last{
+		   span {
+             display: none;
+		     }
+		  }
 		}
 	}
