--- a/sass/partials/_regions.scss
+++ b/sass/partials/_regions.scss
@@ -16,12 +16,16 @@
 	float: left;
 	padding: 0 10px 10px 0;
 	}
+.not-front #content-wrapper{
+	padding-top: 5px;
+  }
+
 #content-wrapper{
 		padding: 25px 0 0 0;
 		@include clearfix;
 
 		.articles{
-			background: $article-bg;
+			background: $white;
 			@include border-radius(2px);
 			@include box-shadow($border-shadow 2px 2px 10px);
 			border: 1px solid $border-shadow;
@@ -60,16 +64,22 @@
 				color: $txt-color;
 
 				.content {
+					font-size: 1.2em;
+					font-weight: 300;
 					p {
-						padding-bottom: 10px; 
+						padding-bottom: 10px;
 						}
 					}
 
 				h2.article-title{
-					font-size: 1.5em;
-					font-weight: bold;
+					font-size: 1.8em;
+					font-weight: 300;
 					padding-bottom: 10px;
 					color: $black;
+
+					a {
+					  color: $black;
+					  }
 					}
 
 				span.readmore{
@@ -123,4 +133,11 @@
 	#footer-wrapper{
 		border-top: 5px solid $gray;
 		padding-top: 15px;
+		background: $black;
+		height: 100px;
+		color: $white;
+		position: absolute;
+		left: 0;
+		bottom: 0;
+		width: 100%;
 		}
