--- a/sass/partials/global/_base.scss
+++ b/sass/partials/global/_base.scss
@@ -3,6 +3,7 @@
 ////////////////////////
 @import 'compass/reset';
 @import 'compass';
+@import 'compass/layout/sticky-footer';
 
 ////////////////////////
 // Private Imports
